Removed useless code in styles.css Added reactive header font sizes

--- a/orders.html
+++ b/orders.html
@@ -18,18 +18,29 @@
 	</div>
 	
 	<table style="width: 100%">
+
+		<colgroup>
+			<col style="width: 25%"/>
+			<col style="width: 50%"/>
+			<col style="width: 25%"/>
+		</colgroup>
+
+		<thead>
 		<tr>
 			<th>Categories</th>
 			<th>Menu</th>
 			<th>Order</th>
 		</tr>
-		<tr>
-			<td id="categories">
-				<h2>Please Select A Restaurant</h2>
-			</td>
+		</thead>
+
+		<tbody>
+		<tr style="height: 640px">
+			<td id="categories"></td>
 			<td id="selection"></td>
 			<td id="summary"></td>
 		</tr>
+		</tbody>
+
 	</table>
 </body>
 <script src="client.js"/>
