restaurant name, delivery charge and minimum order are now displayed;

--- a/orders.html
+++ b/orders.html
@@ -21,6 +21,10 @@
 
 		<thead>
 		<tr>
+			<th colspan="2" id="restaurantName"></th>
+			<td id="restaurantInfo"></td>
+		</tr>
+		<tr>
 			<th>Categories</th>
 			<th>Menu</th>
 			<th>Order</th>
