renamed HTML id "summary" to "order"; selectRestaurant() now displays the name, fee and minimum order; added order summary space to bottom of order (WIP);

--- a/orders.html
+++ b/orders.html
@@ -33,9 +33,12 @@
 
 		<tbody>
 		<tr style="height: 640px">
-			<td id="categories"></td>
-			<td id="selection"></td>
-			<td id="summary"></td>
+			<td rowspan="2" id="categories"></td>
+			<td rowspan="2" id="selection"></td>
+			<td rowspan="1" id="order"></td>
+		</tr>
+		<tr>
+			<td>Order Summary:</td>
 		</tr>
 		</tbody>
 
