renamed updateOrder() to update(); fixed type coercion bug in total calculation; added a submit button, still needs coding;

--- a/orders.html
+++ b/orders.html
@@ -40,10 +40,11 @@
 		<tr>
 			<td id="orderSummary"> <!--TODO: Add a 'submit order' button-->
 				<h3>Order Summary:</h3>
-				<p id="subtotal">Subtotal:<span class="priceTag">$0</span></p>
-				<p id="taxes">Tax:<span class="priceTag">$0</span></p>
-				<p id="deliveryFee">Delivery Fee:<span class="priceTag">$0</span></p>
-				<p id="total">Total:<span class="priceTag">$0</span></p>
+				<p id="subtotal">Subtotal:<span class="priceTag">$0.00</span></p>
+				<p id="taxes">Tax:<span class="priceTag">$0.00</span></p>
+				<p id="deliveryFee">Delivery Fee:<span class="priceTag">$0.00</span></p>
+				<p id="total">Total:<span class="priceTag">$0.00</span></p>
+				<div id="submitButton" class="noneSelected">Please Select a Restaurant</div>
 			</td>
 		</tr>
 		</tbody>
